# SoftRenderer

./: CMakeLists.txt
SoftRenderer/: CMakeLists.txt
SoftRenderer/model/: jotaro.fbx  jotaro.mtl  spot.mtl  可爱小鸡.mtl
SoftRenderer/model/character/source/: Charter@T-Pose.fbx
SoftRenderer/src/: Camera.cpp  Camera.h  Light.h  Math.cpp  Math.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  fragmentShader.cpp  fragmentShader.h  main.cpp  vertexShader.cpp  vertexShader.h
